--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,169 @@
 .App {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
+.z1 {
+  z-index: 2;
+}
+.z2 {
+  z-index: 4;
+}
+
+.S {
+  padding-top: 40px;
+  padding-right: 40px;
+  padding-left: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  align-content: space-around;
+}
+
+.div_box {
+  max-width: 240px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10vh;
+}
+
+.box {
+  width: 240px; /*960*/
+  height: 134.88px; /*539.52*/
+  max-width: 240px;
+  max-height: 134.88px;
+  background-color: aqua;
+  border-radius: 8px;
+}
+
+.span {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-weight: 600;
   text-align: center;
+  padding-top: 2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/*  */
+body {
+  background-image: linear-gradient(
+    to bottom right,
+    #91defe,
+    #99c0f9,
+    #bdb6ec,
+    #d7b3e3,
+    #efb3d5,
+    #f9bccc
+  );
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  height: 100vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bodyball {
+  z-index: 2;
+  width: 100%;
+  padding-top: 35vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: absolute;
 }
 
-.App-link {
-  color: #61dafb;
+.ball {
+  z-index: 4;
+  animation: float 3.5s ease-in-out infinite;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  /* position: relative; */
+
+  background: radial-gradient(
+    circle at 75% 30%,
+    white 5px,
+    aqua 8%,
+    darkblue 60%,
+    aqua 100%
+  );
+  box-shadow: inset 0 0 20px #fff, inset 10px 0 46px #eaf5fc,
+    inset 88px 0px 60px #c2d8fe, inset -20px -60px 100px #fde9ea,
+    inset 0 50px 140px #fde9ea, 0 0 90px #fff;
+
+  background-repeat: no-repeat;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes float {
+  0% {
+    transform: translatey(0px);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translatey(-80px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+.shadow {
+  background: #b490b2;
+  width: 150px;
+  height: 40px;
+  top: 70%;
+  animation: expand 4s infinite;
+  position: absolute;
+  border-radius: 50%;
+}
+@keyframes expand {
+  0%,
+  100% {
+    transform: scale(0.5);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .ball {
+    animation: float 4.5s ease-in-out infinite;
+    height: 120px;
+    width: 120px;
+
+    background: radial-gradient(
+      circle at 65% 35%,
+      white 5px,
+      aqua 15%,
+      darkblue 50%,
+      aqua 100%
+    );
+    background-repeat: no-repeat;
+
+    box-shadow: inset 0 -20px 30px #fff, inset 40px 0 46px #eaf5fc,
+      inset 58px 0px 60px #c2d8fe, inset -8px -30px 100px #fde9ea,
+      inset 0 20px 110px #fde9ea, 0 0 90px #fff;
+  }
+  .shadow {
+    z-index: 2;
+    width: 90px;
+    height: 20px;
+    top: 78%;
+    animation: expand 5s infinite;
+  }
+
+  @keyframes float {
+    0% {
+      transform: translatey(0px);
+    }
+    50% {
+      transform: translatey(-50px);
+    }
+    100% {
+      transform: translatey(0px);
+    }
   }
 }
