--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@ a {
   display: flex;
   flex-direction: column;
   margin-bottom: 10vh;
+  margin-left:10px ;
+  margin-right:10px ;
 }
 
 .box {
@@ -61,8 +63,16 @@ body {
     #f9bccc
   );
 
-  height: 100vh;
+  /* height: 100vh; */
+  height: auto;
 }
+@media only screen and (min-width: 768px) {
+  body{
+    height: 100vh;
+  }
+}
+
+
 .bodyball {
   z-index: 2;
   width: 100%;
