--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,17 @@ a {
   padding-top: 2px;
 }
 
+
+.All{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+
 /*  */
 body {
   background-image: linear-gradient(
@@ -69,11 +80,11 @@ body {
   background-size: 10000vh 10000vh;
 
 }
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) {
   body{
-    /* height: 100vh; */
+    height: 100vh;
   }
-}
+} */
 
 
 .bodyball {
